--- a/apollo-client-demo/Cargo.toml
+++ b/apollo-client-demo/Cargo.toml
@@ -13,3 +13,7 @@ serde_json = { version = "1.0.44", features = ["preserve_order"] }
 futures = { version = "0.3.1", features = ["alloc"] }
 futures-timer = { version = "3.0.2", optional = true }
 systemstat = { version = "0.1.5", optional = true }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
+config = "0.9"
+lazy_static = "1.4.0"
