--- a/apollo-client-demo/Cargo.toml
+++ b/apollo-client-demo/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "apollo-client-demo"
 version = "0.1.0"
-authors = ["zy_tang <zy_tang@kingdee.com>"]
+authors = ["tomgs <tomgs@qq.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
