--- a/unit-test/Cargo.toml
+++ b/unit-test/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unit-test"
 version = "0.1.0"
-authors = ["tomgs <tomgs@qq.com>"]
+authors = ["zy_tang <tomgs@qq.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
