--- a/guessing_game/Cargo.toml
+++ b/guessing_game/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "guessing_game"
 version = "0.1.0"
-authors = ["zy_tang <zy_tang@kingdee.com>"]
+authors = ["zy_tang <zy_tang@tomgs.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
