--- a/async-std-demo/Cargo.toml
+++ b/async-std-demo/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2018"
 
 [dependencies]
 async-std = { version = "1.6.5", features = ["unstable"] }
-futures = "0.3.4"
-futures-core = { version = "0.3.4", optional = true, default-features = false }
-futures-io = { version = "0.3.4", optional = true }
-futures-lite = { version = "1.0.0", optional = true }
-futures-channel = { version = "0.3.4", optional = true }
+futures = "0.3.5"
+# futures-core = { version = "0.3.4", optional = true, default-features = false }
+# futures-io = { version = "0.3.4", optional = true }
+# futures-lite = { version = "1.0.0", optional = true }
+# futures-channel = { version = "0.3.4", optional = true }
+tokio = { version = "0.2", features = ["full"] }
