--- a/advance/Cargo.toml
+++ b/advance/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = "1.0.117"
+serde_json = "1.0"
+surf = "2.1.0"
+async-std = { version = "1.6.5", features = ["unstable", "attributes"] }
