--- a/advance/Cargo.toml
+++ b/advance/Cargo.toml
@@ -11,3 +11,4 @@ serde = "1.0.117"
 serde_json = "1.0"
 surf = "2.1.0"
 async-std = { version = "1.6.5", features = ["unstable", "attributes"] }
+clap = { version = "3.0.0-beta.2" }
